--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Sky-Seeker</title>
-</head>
-<body>
-  <h1>Sky-Seeker ✈️</h1>
-  <input type="text" id="searchBox" placeholder="Search for aircraft...">
-  <button onclick="search()">Search</button>
-  <ul id="results"></ul>
-
-  <script src="app.js"></script>
-</body>
-</html>
+<div id="results"></div>
