--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,37 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sky-Seeker</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      padding: 2rem;
-      background: #f8f9fa;
-    }
-    h1 {
-      color: #333;
-    }
-    input, button {
-      padding: 0.5rem;
-      margin-right: 0.5rem;
-    }
-    #results a {
-      display: block;
-      margin-bottom: 0.5rem;
-    }
-  </style>
-</head>
-<body>
-  <h1>Sky-Seeker: Aircraft Search</h1>
-  <form id="searchForm">
-    <input type="text" id="searchInput" placeholder="Search aircraft..." />
-    <button type="submit">Search</button>
-  </form>
-  <div id="results"></div>
+<form id="searchForm">
+  <input type="text" id="searchInput" placeholder="Search for aircraft..." />
+  <button type="submit">Search</button>
+</form>
+<div id="results"></div>
+<script src="app.js"></script>
 
-  <script src="app.js"></script>
-</body>
-</html>
 
