--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,19 @@
-<form id="searchForm">
-  <input type="text" id="searchInput" placeholder="Search for aircraft..." />
-  <button type="submit">Search</button>
-</form>
-<div id="results"></div>
-<script src="app.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sky-Seeker</title>
+</head>
+<body>
+  <h1>Search for Aircraft</h1>
+  <form id="searchForm">
+    <input type="text" id="searchInput" placeholder="Search for aircraft..." />
+    <button type="submit">Search</button>
+  </form>
+  <div id="results"></div>
 
+  <script src="app.js"></script>
+</body>
+</html>
 
